[package]
name = "rust-kbkdf"
version = "1.0.0"
edition = "2021"
authors = ["Michael Boquard <michael.j.boquard@gmail.com>"]
description = "SP800-108 Key Based Key Derivation Using Pseudorandom Functions"
license = "Apache"
repository = "https://gitlab.com/michael.j.boquard/dvb-rcs2-rust"
readme = "README.md"
keywords = ["kdf", "crypto"]
categories = ["crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
openssl = "0.10"
hex = "0.4"