[package]
name = "rust-kbkdf"
version = "1.0.1"
edition = "2021"
authors = ["Michael Boquard <michael.j.boquard@gmail.com>"]
description = "SP800-108 Key Based Key Derivation Using Pseudorandom Functions"
license = "Apache-2.0"
repository = "https://gitlab.com/michael.j.boquard/rust-kbkdf"
readme = "README.md"
keywords = ["kdf", "crypto", "sp800-108"]
categories = ["cryptography"]
exclude = [ ".idea/" ]

[dependencies]
generic-array = "0.14"
typenum = "1.15"
zeroize = "1.5.6"

[dev-dependencies]
openssl = "0.10"
hex = "0.4"